packages/shared/styles/SectionHeader.module.scss
// (c) Copyright Ascensio System SIA 2009-2026
//
// This program is a free software product.
// You can redistribute it and/or modify it under the terms
// of the GNU Affero General Public License (AGPL) version 3 as published by the Free Software
// Foundation. In accordance with Section 7(a) of the GNU AGPL its Section 15 shall be amended
// to the effect that Ascensio System SIA expressly excludes the warranty of non-infringement of
// any third-party rights.
//
// This program is distributed WITHOUT ANY WARRANTY, without even the implied warranty
// of MERCHANTABILITY or FITNESS FOR A PARTICULAR  PURPOSE. For details, see
// the GNU AGPL at: http://www.gnu.org/licenses/agpl-3.0.html
//
// You can contact Ascensio System SIA at Lubanas st. 125a-25, Riga, Latvia, EU, LV-1021.
//
// The  interactive user interfaces in modified source and object code versions of the Program must
// display Appropriate Legal Notices, as required under Section 5 of the GNU AGPL version 3.
//
// Pursuant to Section 7(b) of the License you must retain the original Product logo when
// distributing the program. Pursuant to Section 7(e) we decline to grant you any rights under
// trademark law for use of our trademarks.
//
// All the Product's GUI elements, including illustrations and icon sets, as well as technical writing
// content are licensed under the terms of the Creative Commons Attribution-ShareAlike 4.0
// International. See the License terms at http://creativecommons.org/licenses/by-sa/4.0/legalcode

@use "@docspace/ui-kit/styles/mixins";
@use "@docspace/ui-kit/styles/variables/colors";

.headerContainer {
  width: 100%;
  min-height: 33px;

  .analyzeResponsesButton {
    padding: 6px 10px;
    height: 32px;
    span {
      font-size: 13px;
      @include mixins.truncate;
    }

    :global(.icon) {
      flex-shrink: 0;
    }
  }

  :global(.table-container_group-menu) {
    margin-block: 0;
    margin-inline: -20px 0;
    -webkit-tap-highlight-color: #{colors.$tap-highlight};

    width: calc(100% + 40px);
    height: 68px;

    @include mixins.tablet-and-below {
      height: 61px;
      margin-block: 0;
      margin-inline: -16px 0;
      width: calc(100% + 32px);
    }

    @include mixins.mobile {
      height: 52px !important;
      margin-block: 0;
      margin-inline: -16px 0;
      width: calc(100% + 32px);
    }
  }

  :global {
    .header-container {
      min-height: 33px;
      align-items: center;

      @include mixins.tablet-and-below {
        height: 61px;
      }

      @include mixins.mobile {
        height: 53px;
      }

      .navigation_button {
        display: block;
        margin: 0 16px;
        overflow: visible;
        min-width: 50px;

        .button-content {
          @include mixins.truncate;

          display: block;
          padding-top: 3px;
        }

        @include mixins.tablet-and-below {
          display: block;
        }

        @include mixins.mobile {
          display: none;
        }
      }

      .title-icon {
        svg {
          path {
            fill: var(--room-icon-link-icon-path);
          }
          rect {
            stroke: var(--background-color);
          }
        }
      }

      .header_sign-in-button {
        margin-inline-start: auto;
        display: block;

        @include mixins.tablet-and-below {
          margin-inline-start: 16px;
        }

        @include mixins.mobile {
          display: none;
        }
      }
    }
  }

  &.infoPanelVisible {
    :global {
      .header-container {
        .navigation_button {
          @include mixins.tablet-and-below {
            display: none;
          }
        }
      }
    }
  }

  &:not(.isExternalFolder) {
    :global {
      .header-container {
        .title-icon {
          svg {
            path {
              fill: var(--background-color);
            }
          }
        }
      }
    }
  }

  &.isLifetimeEnabled {
    :global {
      .header-container {
        .title-icon {
          svg {
            path {
              fill: var(--navigation-lifetime-enabled-fill);
              stroke: var(--navigation-lifetime-enabled-stroke);
            }
          }
        }
      }
    }
  }
}

